2019-09-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap, pop3: include remote port TCP port number together with the
	IP address, in log messages.

5.0.8

2019-08-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update documentation in the imapd and pop3d ssl config flies.

	* Fix the RPM spec file for CentOS 7

5.0.7

2019-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (do_retr): Use the new MIME_UNICODE_MESSAGE_TYPE
	setting to set the type of the wrapped MIME attachment.

5.0.6

2019-01-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c: Fix parsing of pop3d file cache, on some
	architectures.

2019-01-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c: Ignore unreadable cert files.

5.0.5

2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* fetch.c: Send an alert about a Unicode messages to a non-Unicode
	client at most once per IMAP session.

5.0.4

2018-11-28  Hideki SAKAMOTO <hsakamt@tsnr.com>

	* pop3dserver.c: Deal with MS Outlook's broken implementation of
	RFC 6856.

5.0.3

2018-11-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (calcsize): Fix spurious flagging of non-UTF8
	messages as UTF-8.

	To fix existing mailboxes with erroneously-flagged messages. In
	each mailbox, if its existing courierpop3dsizelist file starts with

	/3 [followed by additional data]

	Only if the first line in courierpop3dsizelist starts with /3, then
	execute:

	perl -p -i -e 's/:\d+$/:0/' courierpop3dsizelist

2018-11-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3dserver.c (readpop3dlist): Be able to update
	courierpop3dsizelist from version 2 to 3 in place.
	(do_retr): Instead of returning an ERR to a non-Unicode client,
	handle Unicode messages by wrapping them as an attachment.

5.0.2

2018-10-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: Additional changes to how Unicode messages are
	handled with non-Unicode clients: disclaim all warranties, still