@@ -4,7 +4,7 @@ dnl
 dnl Copyright 1998 - 2019 Double Precision, Inc.  See COPYING for
 dnl distribution information.
 
-AC_INIT(courier-imap, 5.0.8, [courier-users@lists.sourceforge.net])
+AC_INIT(courier-imap, 5.0.8.20191205, [courier-users@lists.sourceforge.net])
 
 >confdefs.h  # Kill PACKAGE_ macros
 
